--- a/index.html
+++ b/index.html
@@ -1,120 +1,73 @@
+<!DOCTYPE html>
 <html>
-    <!-- where we set up document -->
     <head>
-        <!-- where we title the document -->
-        <title>Christina Montes Business Card</title>
-        <!-- where we link to the style sheet -->
+        <title>TEST</title>
         <link rel="stylesheet" href="style.css">
-        <!-- where we link to the font -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
-        <!-- where we link to the favicon -->
-        <link rel="shortcut icon" href="assets/favicon-1.svg"/>
-        <!-- where we link to the animation -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
     </head>
-
     <body>
-       <!-- container is all of the content on the page -->
-        <div class="container">
-<!-- the front of the card -->
-<section class="front-card card"> 
-    <div class="text-container">
-        <h1>Christina Montes</h1>
-        <h2>Graphic Design • Illustration</h2>
-    </div>
-</section>
-<!-- the back of the card -->
-<section class="back-card card">
-    <div class="text-container">
-        <h3></h3>
-    </div>
-<!-- container that holds icons -->
-<div class="icon-container">
-    <!-- the first icon -->
-    <div class="icon">
-        <a href="https://www.instagram.com/christina.mdo/">
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        viewBox="0 0 223 237" style="enable-background:new 0 0 223 237;" xml:space="preserve">
-   <g>
-       
+        viewBox="0 0 540 540" style="enable-background:new 0 0 540 540;" xml:space="preserve">
+   <style type="text/css">
+       .st0{fill:#FEFEFE;}
+       .st1{fill:#DDDDDD;}
+       .st2{fill:#E0E0E0;}
+   </style>
+   <g class="heartBeat" id="Artboard_1">
        <g>
-           <path d="M110.42,235.76c-24.57-0.03-49.17,0.6-73.71-0.2c-24.67-0.81-33.48-14.44-33.36-39.42c0.19-41.18-4-82.31-1.51-123.6
-               c1.05-17.46,4.29-34.63,4.93-52.21C7.24,6.87,13.14-3.14,33.03,1.87c16.72,4.21,35.83,0.04,53.67-1.12
-               c32.97-2.15,65.41,1.02,97.64,5.72c26.33,3.83,33.54,17.15,36.14,55.2c2.76,40.31,2.14,80.61,0.97,120.97
-               c-0.45,15.34-7.86,27.61-13.84,40.38c-4.41,9.43-14.05,13.25-25.38,12.96C158.31,235.37,134.36,235.79,110.42,235.76z
-                M115.51,210.3c0,0.37,0,0.75,0,1.12c17.65,0,35.31-0.12,52.96,0.05c9.1,0.09,11.67-2.79,13.09-13.03
-               c6.3-45.21-2.06-90.1-1.11-135.15c0.39-18.59-10.06-31.3-29.87-35.18c-25.47-4.99-51.35-4.6-77.01-6.69
-               c-38.14-3.1-40.04-2.05-37.62,35.22c2.92,44.99,0.89,90.15,6.27,135.09c1.77,14.78,8.53,18.26,20.35,18.48
-               C80.2,210.54,97.86,210.3,115.51,210.3z"/>
-           <path d="M113.15,74.14c23.05,0.05,44.81,11.88,47.55,29.14c3.7,23.3-0.29,43.99-23.3,56.3c-19.27,10.31-38.84,14.93-61.02,6.56
-               c-27.07-10.23-31.51-66.86-4.35-80.58C85.28,78.86,98.13,73.3,113.15,74.14z M107.61,100.79c-8.44,4.23-24.01-1.72-24.65,15.92
-               c-0.5,13.86,12.81,25.7,28.95,25.48c10.48-0.14,18.43-3.31,17.73-16.35C128.88,111.81,125.02,101.03,107.61,100.79z"/>
+           <g>
+               <path class="st0" d="M68.6,236.9c0-38.4,0-76.8-0.1-115.2c0-3,0.6-3.6,3.6-3.6c136.8,0.1,273.5,0.1,410.3,0c3,0,3.6,0.6,3.6,3.6
+                   c-0.1,111.8-0.1,223.5,0,335.3c0,3.7-1.4,3.5-4.1,3.5c-81.9-0.1-163.7,0-245.6,0c-0.5-1.2,0.2-2,1.1-2.7
+                   c12.5-4.9,24.7-10.6,36.7-16.8c30.9-15.8,61.9-31.6,90.6-51.3c10-6.9,18.9-15.2,28.9-22.1c2.1-1.4,4.2-2.7,6.6-3.4
+                   c1.6-0.4,3.2-1,4.5-2.1c11.7-10,25.1-18.1,32.7-32.4c2.8-5.3,7.4-9.3,11.8-13.5c5.1-4.9,8.7-10.8,11.6-17.3
+                   c4-9,8.7-17.6,12.8-26.5c5.6-12.2,10.3-24.8,9.9-38.3c-0.6-18.2-4.1-35.8-13.6-52c-4.6-7.9-8.8-15.5-17.4-19.8
+                   c-3.5-1.7-7-2.8-10.9-3c-13.6-0.6-26.9,1.6-40.1,3.8c-5.6,0.9-6.6,0.5-6.5-5.3c0.2-6.4-1.5-12.5-2.8-18.7
+                   c-0.8-3.9-2.4-7.5-5-10.7c-4.1-4.9-8.8-7.4-15.5-7.1c-9.3,0.5-18.7-0.4-27.9,0.3c-23.9,1.9-42.4,12.9-54.8,33.9
+                   c-13.2,22.4-19.2,47.3-25,72.2c-1.7,7.4-3.8,14.8-5.1,22.4c-2,11.3-1.9,22.8-2.5,34.3c-0.1,1.5,0.4,2.9,1.4,4.9
+                   c1.1-4.2,1.8-7.9,2.1-11.5c1.1-14.8,6.2-28.6,11.2-42.3c4.3-11.7,7.2-23.9,12.7-35.1c7.2-14.8,13.2-30.3,22.6-43.8
+                   c6.7-9.6,16-17,29.1-16.7c3.5,0.1,6.9-0.7,10.4-1.1c7.3-0.8,12.1,2.5,15.1,8.9c0.9,1.8,1.6,3.7,1.8,5.7
+                   c1.2,14.6,2.6,29.2-2.9,43.4c-4.2,11-6.9,22.6-11.4,33.5c-1.6,4-2.9,8.3-0.2,12.5c2.1,3.3,3.9,3.5,5.9,0.4
+                   c4.5-7,9.3-13.7,13.1-21.2c5-9.9,10.8-19.3,19.6-26.7c4.5-3.8,8.4-8.4,13.8-11.3c12.3-6.6,26.6-4.3,35.6,6.1
+                   c8.6,9.9,16.4,20.5,17.7,33.9c1,10.8,2,21.9-1.5,32.6c-8.2,25.3-21.6,47.8-39.4,67.6c-7.1,7.9-14.2,15.9-21.6,23.5
+                   c-20.9,21.6-45.8,37.8-71.7,52.7c-28.4,16.4-57.3,31.9-85.9,47.7c-1.2,0.6-2.4,1.2-3.6,1.7c-6.6,2.6-6.6,2.6-4.3,9.3
+                   c0,0.5-0.2,1-0.6,1.4c-51,0-102,0-153,0.1c-3.2,0-3.8-0.8-3.8-3.9c0.1-68.3,0.1-136.5,0.1-204.8c0.4-0.4,0.9-0.5,1.5-0.4
+                   c3,2.5,2.6,6.3,3.8,9.5c8.2,21.4,20.4,40.2,34.1,58.4c8,10.6,16.2,21.2,26,30.2c14.3,13,30.8,22.5,49.9,27
+                   c16.6,3.9,33.4,5.3,50.3,5.9c8.6,0.3,17.2,1.4,25.8-0.1c15.7-2.7,30.7-7.5,44.6-15.3c4.8-2.7,9.6-5.3,14.3-8.2
+                   c4.7-2.9,9-6.2,12.9-10.1c8.7-8.9,18.5-16.8,25.4-27.4c0.7-1.1,2.7-2.2,1.4-3.7c-1.1-1.2-2.9-0.3-4.2,0.4
+                   c-3.6,2.1-7.2,4.1-10.2,7c-12.7,12.3-27.8,21-43.9,28c-7.8,3.4-15.4,7.1-23.7,9.3c-15,4-30.2,4.6-45.5,2.7
+                   c-12-1.5-24.1-1.9-36-4.7c-17.4-4.1-33.2-11.8-46.2-23.5c-19.4-17.4-35.3-38-47.3-61.3c-6.4-12.5-9.9-26.2-8.9-40
+                   c2-30.1,13.9-55.4,42.9-68.5c12.1-5.5,24.9-10.5,38.9-9.4c4.5,0.4,9,0.1,13.5,0c17.2-0.3,32.3,5.2,45.2,16.6
+                   c2.7,2.3,5.6,2.8,8.8,2c5.2-1.4,7-6.5,3.9-10.9c-1-1.4-2.2-2.4-3.6-3.5c-10.2-7.9-21.5-13.8-32.9-19.7c-6.5-3.4-14-3.5-21-3.5
+                   c-13.1-0.1-26.2-1.2-39.4-1.3c-17.3-0.2-31.6,6.8-44.6,17.3c-18.2,14.7-28.1,34.2-32,56.9c-1.2,6.9-0.1,13.9-1.5,20.9
+                   c-0.3,1.5-0.1,3-1,4.3C69.6,237.1,69.1,237.2,68.6,236.9z"/>
+               <path class="st1" d="M68.6,236.9c0.3,0,0.6,0,1,0c2.5,4.9,2.2,9.9,0.3,14.9c-0.4,0-0.8,0.1-1.2,0.1
+                   C68.6,246.8,68.6,241.9,68.6,236.9z"/>
+               <path class="st2" d="M225.3,460.4c0-0.4,0.1-0.8,0.1-1.2c3.9-1.7,7.8-1.8,11.9-0.7c-0.3,0.7-0.7,1.3-1,2
+                   C232.6,460.4,229,460.4,225.3,460.4z"/>
+               <path d="M237.3,458.4c-3.9,1.3-7.9,0.8-11.9,0.7c-0.6-0.8-1.3-1.5-1.8-2.4c-2.7-5-2.5-5.3,2.9-7.2c7.3-2.5,13.8-6.6,20.4-10.3
+                   c29.4-16.3,58.9-32.3,87.9-49.3c25.6-15,48.3-33.9,67.8-56.5c7.9-9.2,16.5-17.8,23.4-27.7c11.3-16.1,21.4-33.3,25.8-52.4
+                   c3.5-15.3,3.8-31.6-5-46.3c-4.9-8.2-10.3-15.8-17.7-22c-2.3-1.9-4.6-2.7-7.6-3.1c-11.4-1.4-21.3,1.4-29.6,9.3
+                   c-10.3,9.9-19.2,20.7-25.1,33.8c-3.2,7.2-8.3,13.2-12.3,19.9c-2.2,3.8-5.4,3.4-7.5-0.8c-2.2-4.4-2-8.9-0.4-13.5
+                   c4.6-13.3,9.6-26.5,13.4-40c3.7-13,3.6-26.6,0.5-39.8c-2.1-9-7.8-12-17.3-10.5c-4.3,0.6-8.5,1-12.8,0.8c-2-0.1-4.1,1-6,1.9
+                   c-8.1,4-15.3,9.3-19.6,17.6c-11,21.4-22.5,42.6-29.5,65.9c-3.5,11.5-8.1,22.8-11.3,34.4c-2.7,9.5-3.4,19.6-5,29.4
+                   c-0.1,0.7-0.2,1.5-0.3,3.4c-2.9-4-4.2-7.3-4.1-11.1c0.3-20,3.6-39.5,8.5-58.9c4.9-19.2,9.9-38.3,17.8-56.5
+                   c7.5-17.5,18.8-31.6,36.2-40.4c7.6-3.8,15.5-5.8,23.6-6.2c11.8-0.6,23.6-1.1,35.4-0.3c8.3,0.6,12.5,5.9,15.2,12.5
+                   c3.8,9.4,5.6,19.4,4.7,29.8c14.5-2.5,28.5-5.4,43-5.1c12.1,0.2,21.1,5.8,27.3,15.4c12.7,19.6,18.6,41.2,18.3,64.6
+                   c-0.2,10.3-3.3,20.1-7.3,29.3c-5.9,13.8-13,27.1-19.7,40.6c-1.3,2.7-3.3,5-5.4,7.1c-7.1,7.3-13.8,14.7-19,23.6
+                   c-3.3,5.7-8.6,10-13.9,14.1c-4.3,3.3-9.4,5.6-12.9,10.1c-0.7,0.9-1.8,1.6-2.9,1.9c-8.4,2.1-14.4,7.9-20.7,13.1
+                   c-16.6,13.8-34.8,25.1-53.5,35.7c-27.4,15.5-55.3,30.1-84.1,42.8C242.7,457,239.9,457.5,237.3,458.4z"/>
+               <path d="M69.8,251.7c-0.1-5-0.2-9.9-0.3-14.9c1.2-10.1,0.5-20.2,2.5-30.3c5.7-27.3,20.4-48,44.5-62c10.4-6,21.6-9.3,33.8-8.6
+                   c14.3,0.8,28.6,1.4,42.9,1.5c10.5,0,19.1,4.7,28,9.4c7.5,3.9,14.4,8.8,21.4,13.6c1.6,1.1,3.1,2.5,4.3,4.1c3.4,4.5,2.9,8-1.6,11.9
+                   c-3.3,2.8-9.5,2.5-12.5-0.8c-8.2-8.8-19-13.1-30.1-15.2c-25.4-4.8-50.4-2.4-73,11.2c-16.7,10.1-29.1,24-32.3,44.4
+                   c-1.1,6.7-4,13.1-3.8,20c0.7,18.4,5.2,35.7,15.5,51.1c11,16.4,22.7,32.4,37.3,45.9c13.9,12.7,29.9,21.7,48.5,25.7
+                   c19.6,4.3,39.4,5.9,59.3,5.9c14.8,0,28.4-5.6,41.8-11.3c18.3-7.8,35.2-17.7,49.7-31.6c4-3.8,9.1-7.7,16.9-5.9
+                   c-5.2,6.7-9.3,13.8-15.1,19c-7.6,6.9-13.9,15.2-22.5,21.1c-19.2,13.1-39.7,23.4-62.8,27.2c-15.8,2.6-31.8,1-47.7-0.7
+                   c-10.2-1.1-20.3-2.1-30.4-4.4c-15.9-3.6-29.7-11.2-42.6-20.4c-11.6-8.2-20.4-19.4-29.3-30.4c-11.1-13.9-21.1-28.4-29.7-44
+                   C77.2,273.3,72.2,263.1,69.8,251.7z"/>
+           </g>
        </g>
    </g>
    </svg>
-</a>
-    </div>
-    <!-- the second icon -->
-    <div class="icon">
-        <a href = "mailto: christymdo@gmail.com">
-  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-             viewBox="0 0 273.49 228.94" style="enable-background:new 0 0 273.49 228.94;" xml:space="preserve">
-        <g>
-            <g>
-                <path d="M3.57,140.51c0-28.54,0-57.08,0-85.63c7.48-1.88,11.8-12.38,21.98-7.42c4.68,2.28,8.04,7.82,14.03,6.82
-                    c29.67-4.95,42.68,19.4,58.33,35.74c19.12,19.96,27.69,47.53,40.78,71.81c6.68,12.4,10.75,9.52,16.11-0.56
-                    c5.56-10.45,11.68-20.61,17.81-30.74c13.79-22.79,27.62-45.6,44.94-65.94c7.9-9.27,0.61-18.14,0.65-27.14
-                    c0.02-4.84-5.06-5.23-8.13-4.22c-8.89,2.93-17.78-0.89-26.33,0.43c-42.14,6.51-84.51,7.23-126.99,6.57
-                    c-9.02-0.14-21.48,0.51-22.02-9.5c-0.62-11.42,12.01-14.19,22.19-15.89c1.16-0.19,2.37-0.08,3.56-0.09
-                    c42.61-0.37,84.75-5.39,126.91-11.34c19.67-2.78,40.07-5.48,59.99,1.62c6.56,2.34,11.93,4.3,13.42,12.14
-                    c3.24,17.04,19.72,32.71,4.98,51.6c-0.83,1.06,0.28,3.49,0.12,5.24c-2.85,31.97,3.21,63.93-2.22,96.16
-                    c-5.54,32.82-26.28,53.87-60.17,54.32c-29.61,0.39-59.24,0.18-88.85,0.81c-26.79,0.56-53.57,2.38-80.36,2.63
-                    c-10.74,0.1-18.74-5.56-22.51-16.78c-5.46-16.28-3.06-32.92-3.9-49.43C7.54,154.57,12.2,146.06,3.57,140.51z M46,77.55
-                    c2.04,33.13,4.41,63.27,5.45,93.46c0.32,9.21,2.19,16.26,11.73,16.07c14.08-0.27,28.63,0.6,43.07-5.45
-                    C89.62,144.98,72.28,110.1,46,77.55z M174.56,184.33c15.42,0,25.48-0.22,35.53,0.07c7.59,0.22,12.96-0.47,10.51-10.63
-                    c-0.88-3.64,1.84-8.01,2.05-12.09c0.8-15.69,4.3-31.51,0.46-50.16C203.25,134.62,197.36,161.92,174.56,184.33z"/>
-            </g>
-        </g>
-        </svg>
-    </a>    
-          
-    </div>
-    <!-- the third icon -->
-    <div class="icon">
-        <a href="https://www.linkedin.com/in/christina-montes-267b97232/">
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        viewBox="0 0 291.75 212.66" style="enable-background:new 0 0 291.75 212.66;" xml:space="preserve">
-   <g>
-       <g>
-           <path d="M123.11,167.3c-4.08-19.15,1.53-43.55-6.88-66.6c-1.73-4.75,1.14-8.66,5.24-10.03c10.32-3.46,21.02-8.88,31.38-8.48
-               c22.37,0.87,44.56-1.47,66.86-1.29c38.89,0.32,72,32.76,72.04,71.9c0.01,12.93-2.65,25.65-0.55,38.86
-               c1.69,10.64-13.84,21.95-26.46,20.73c-7.75-0.75-15.47-3.55-23.12-3.29c-14.37,0.49-24.7-1.03-21.96-19.82
-               c1.08-7.44-6.32-11.04-12.42-14.5c-6.3-3.57-8.48-1.62-8.86,4.86c-1.79,30.47-12.39,24.77-34.13,23.99
-               c-7.86-0.28-14.93-1.31-22.61,1.83c-12.01,4.91-18.42-0.19-18.52-13.53C123.07,185.13,123.11,178.35,123.11,167.3z M156.73,105.2
-               c-3.89,4.21-18.38-3.17-13.18,10.36c6.26,16.26,7.14,33.21,10.52,49.82c0.99,4.88-0.08,10.83,7.44,11.75
-               c7.14,0.87,12.35-1.39,14.87-8.32c3.26-8.95,9.92-14.48,18.17-18.3c18.84-8.73,35.37-2.94,52.18,18.26
-               c2.2,2.77,3.13,7.11,7.68,6.68c5.69-0.54,4.69-6.14,6.4-9.6c9.57-19.27-23.69-58.32-41.39-59.06
-               c-11.41-0.48-21.25-0.81-26.14,13.26c-2.73,7.87-11.46,13.25-20.45,10.75c-8.3-2.31-4.97-9.49-3.7-15.76
-               C171.17,105.1,163.05,106.37,156.73,105.2z"/>
-           <path d="M96.5,133.4c-4.44,16.49,7.29,36.88,0.34,57.65c-2.49,7.42-6.02,12.11-13.11,13.57c-19.91,4.09-40.06,5.52-60.38,3.84
-               c-7.52-0.62-13.31-4.35-14.65-11.75c-4.12-22.9-8.22-45.94-7.9-69.26C1,113.51,11.24,104.8,22.72,99.51
-               c17.7-8.16,37.31-8.57,56.39-10.21c11.11-0.96,17.69,4.73,17.43,16.75C96.36,113.83,96.5,121.62,96.5,133.4z M65.3,138.63
-               c0.55-4.09,1.76-8.22,1.51-12.25c-0.55-8.7,0.22-18.1-14.03-16.62c-18.97,1.96-22.34,4.41-20.75,18.83
-               c1.59,14.43,3.27,28.91,3.55,43.4c0.2,10.29,5.46,12.51,13.84,12.06c7.78-0.42,16.33,2.65,18.35-10.66
-               C69.61,161.3,61.64,150.43,65.3,138.63z"/>
-           <path d="M84.92,37.78c-0.2,22.17-22.08,39.99-48.83,39.78C22.29,77.44,5.35,58.51,5.42,43.29C5.52,21.19,30.32-0.5,54.74,0.15
-               C74.55,0.68,85.14,13.88,84.92,37.78z M52.31,37.6c-0.66-6.2,0.87-14.73-9.42-14.08c-8.32,0.53-15.05,4.13-14.44,14.58
-               c0.57,9.65,6.12,14.15,15,14.38C54.21,52.78,51.67,44.2,52.31,37.6z"/>
-       </g>
-   </g>
-   </svg>
- </a>
-    </div>
-</div>
-</section>
-    </div>
+   
     </body>
 </html>
